# armcl_cmake_mwe

./: .gitignore  CMakeLists.txt  README.org
cmake/: FindARMCL.cmake
src/: CMakeLists.txt  armcl_mwe.cpp
